SigmaCodebackup3rdSep/objects/Sigma_Linkage__c.object
<CustomObject>
    <fields>
        <fullName>Adjusted_Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Adjusted Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Adjusted_Stock_Value__c</fullName>
        <formula>Adjusted_Quantity__c  *  Net_Unit_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Adjusted Stock Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Allocated_Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Allocated Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Available_Quantity__c</fullName>
        <formula>Received_Quantity__c  -  Packaged_Quantity__c  -  Adjusted_Quantity__c -  Moved_OUT__c - Delivered_Quantity__c  -  Work_Order__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Value__c</fullName>
        <description>Value of Stock still present in Inventory</description>
        <formula>Net_Unit_Cost__c   *  Available_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Stock Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Delivered_Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <description>to store quantity of product from the received stock that has been delivered by Shipment</description>
        <label>Delivered Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duty__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Customs Duty taxes on imports and exports of goods.</description>
        <label>Duty Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Freight__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Cost paid for goods transported in bulk by truck, train, ship, or aircraft.</description>
        <label>Freight Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ILP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory Location Product</label>
        <referenceTo>Inventory_Location_Product__c</referenceTo>
        <relationshipName>Sigma_Linkage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Insurance__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Insurance Charge is the amount of money that is must paid for an insurance policy.</description>
        <label>Insurance Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Manufacturing__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manufacturing Run</label>
        <referenceTo>Manufacturing_Run__c</referenceTo>
        <relationshipLabel>Sigma Finances</relationshipLabel>
        <relationshipName>Sigma_Finances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Moved_OUT__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Moved OUT Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Unit_Cost__c</fullName>
        <description>Unit Cost including Landed Cost</description>
        <formula>Unit_Cost__c + ( Total_Landed_Cost__c  /  Received_Quantity__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Unit Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Any other Charges to be applied until the goods arrive in the Inventory.</description>
        <label>Other Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Packaged_Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Packaged Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Sigma_Linkage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase_Order_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchase Order Product</label>
        <referenceTo>Purchase_Order_Product__c</referenceTo>
        <relationshipName>Sigma_Linkage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchase Order</label>
        <referenceTo>Purchase_Order__c</referenceTo>
        <relationshipName>Sigma_Linkage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Received_Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Received Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Stock Adjustments</label>
        <referenceTo>StockAdjustment__c</referenceTo>
        <relationshipName>Sigma_Linkage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SRP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Stock Receiving Product</label>
        <referenceTo>Stock_In_Product__c</referenceTo>
        <relationshipName>Sigma_Linkage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stock_Origin__c</fullName>
        <label>Stock Origin</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Stock Receiving</fullName>
                    <default>true</default>
                    <label>Stock Receiving</label>
                </value>
                <value>
                    <fullName>Direct Add</fullName>
                </value>
                <value>
                    <fullName>Stock Increased</fullName>
                </value>
                <value>
                    <fullName>Moved IN</fullName>
                </value>
                <value>
                    <fullName>BOM Conversion</fullName>
                </value>
                <value>
                    <fullName>Individual Conversion</fullName>
                </value>
                <value>
                    <fullName>Manufacturing Run</fullName>
                </value>
                <value>
                    <fullName>Non stock Product</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Landed_Cost__c</fullName>
        <description>Landed Cost is the Sum of Duty, Freight, Insurance and other taxes</description>
        <formula>Duty__c  +  Freight__c  +  Insurance__c  +  Other__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Landed Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Value__c</fullName>
        <description>Price paid to the vendor for quantity received</description>
        <formula>Net_Unit_Cost__c  *  Received_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Value of Received Stock</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_Cost__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Unit Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Sigma_Linkage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Work Order Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Sigma Finance</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Stock_Origin__c</columns>
        <columns>Vendor__c</columns>
        <columns>Product__c</columns>
        <columns>Purchase_Order__c</columns>
        <columns>Received_Quantity__c</columns>
        <columns>Total_Value__c</columns>
        <columns>Available_Quantity__c</columns>
        <columns>Current_Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SL-{00000}</displayFormat>
        <label>Sigma Linkage</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sigma Finances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>